# OFCSolver

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENT_COLLABORATION_QUICK_REFERENCE.md  API_USAGE_GUIDE.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  TASK-004-COMPLETION-SUMMARY.md  TASK-010-COMPLETION-SUMMARY.md  TASK-013-COMPLETION-SUMMARY.md  TESTING_STRATEGY.md  alembic.ini  demo_api_server.py  demo_command_handlers.py  demo_fantasy_land.py  demo_fl_strategy.py  demo_game_tree.py  demo_game_validator.py  demo_joker_support.py  demo_ofc_game.py  demo_optimized_api.py  demo_pineapple_ofc.py  demo_pineapple_validator.py  demo_simple_solver.py  demo_solver_usage.py  demo_strategy_calculator.py  demo_tree_advanced.py  demo_variant_config.py  docker-compose.yml  optimization_report.py  pyproject.toml  pytest.ini  run_tests.py  setup.sh  task_delegation.md  test_api_basic.py  test_core_features.py  (+6 more)
.claude/: temp_task_context.md
.claude/agents/: architect.md  data-specialist.md
.claude/commands/: spec-implement.md
.claude/scheduler/: quality_check.py  security_check.py  spec_scheduler.py
.github/workflows/: ci.yml
.kiro/specs/ofc-solver-system/: design.md  requirements.md  spec.json  tasks.md
.kiro/steering/: business_rules.md  collaboration.md  product.md  tech.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docs/architecture/: api_architecture_design.md  mvp_implementation_guide.md  rule_variants_support.md
docs/rules/: OFC_GAME_RULES.md
scripts/: init-clickhouse.sql  init-db.sql  setup.sh
scripts/monitoring/: view_api_audit.py  view_command_audit.py
src/: __init__.py  config.py  main.py
src/application/: README.md
src/application/commands/: analysis_commands.py  base.py  game_commands.py  training_commands.py
src/application/decorators/: transactional.py
src/application/handlers/: __init__.py  analysis_command_handlers.py  analysis_handlers.py  game_command_handlers.py  game_handlers.py  training_command_handlers.py  training_handlers.py
src/application/queries/: __init__.py  analysis_queries.py  game_queries.py  query_optimization.py  training_queries.py
src/application/services/: command_bus.py
src/application/validators/: command_validators.py
src/domain/: __init__.py  base.py
src/domain/entities/: __init__.py
src/domain/events/: __init__.py  game_events.py  strategy_events.py  training_events.py
src/domain/exceptions/: __init__.py  base_exceptions.py  game_exceptions.py  strategy_exceptions.py  training_exceptions.py  validation_exceptions.py
src/domain/repositories/: __init__.py  analysis_repository.py  analytics_repository.py  calculation_repository.py  game_repository.py  hand_history_repository.py  player_repository.py  position_repository.py  scenario_repository.py  strategy_repository.py  training_repository.py
src/domain/services/: __init__.py  adaptive_difficulty.py  cached_strategy_calculator.py  fantasy_land_manager.py  fantasy_land_strategy.py  game_tree_builder.py  game_validator.py  hand_evaluator.py  monte_carlo_simulator.py  optimal_play_finder.py  performance_tracker.py  pineapple_evaluator.py  pineapple_fantasy_land.py  pineapple_game_validator.py  royalty_calculator.py  scenario_generator.py  strategy_calculator.py  transposition_table.py  tree_pruning.py  tree_traversal.py
src/domain/value_objects/: __init__.py  card.py  card_position.py  confidence_interval.py  deck.py  difficulty.py  expected_value.py  fantasy_land_state.py  feedback.py  game_rules.py  game_tree_node.py  game_variant_config.py  hand.py  hand_ranking.py  joker_card.py  move.py  performance.py  pineapple_action.py  position.py  probability.py  score.py  strategy.py
src/infrastructure/: __init__.py
src/infrastructure/algorithms/: rate_limiting.py
src/infrastructure/analytics/: clickhouse_client.py
src/infrastructure/cache/: __init__.py  cache_invalidator.py  cache_manager.py  cache_monitor.py  cache_warmer.py  distributed_cache.py  redis_cache.py
src/infrastructure/database/: base.py  connection_pool.py  models.py  session.py
src/infrastructure/monitoring/: __init__.py  health_checker.py  performance_analytics.py
src/infrastructure/reliability/: error_recovery.py
src/infrastructure/security/: auth_algorithms.py
src/infrastructure/testing/: performance_benchmarks.py
src/infrastructure/web/: __init__.py  (+1 more)
tests/: conftest.py  test_caching.py  test_example.py  test_health.py  test_pipeline.py  test_simple.py  test_suite_core.py  test_suite_performance.py  test_suite_security.py
tests/application/: test_command_bus.py  test_query_performance.py
(+46 files in other folders)
